tests/negative/Test3.sp
(* Testing function with wrong return type *)

main:Void(a:Int, b:[String]){
	return 0;
}